style.css
/* ... */
.blog-entry.thumbnail-entry .thumbnail{
    width: 40%;
}
.blog-entry.thumbnail-entry .blog-entry-content{
    width: 60%;
}
.blog-entry.thumbnail-entry .blog-entry-inner{
    width: 1000px;
    max-width: 90%;
    margin: 0 auto;
}
.blog-entry.thumbnail-entry .blog-entry-bottom, .blog-entry.thumbnail-entry .blog-entry-category{
    display: none;
}
.postentry-date{
    font-weight: 700;
    font-size: 20px;
    color: #D0AD6A;
}
.blog-entry.thumbnail-entry{
    padding: 50px 0;
    margin: 0;
    border: 0;
}
.blog-entry.post .blog-entry-header{
    margin-bottom: 10px;
}
#blog-entries .blog-entry:nth-child(even){
    background-color: #000000;
    border-top: 1px solid #000000;
    border-bottom: 1px solid #000000;
    color: #ffffff;
}
body.dark-mode #blog-entries .blog-entry:nth-child(even){
    border-top: 1px solid #FF0000;
    border-bottom: 1px solid #FF0000; 
}
.blog-entry-readmore i{
    display: none;
}
.blog-entry-readmore a{
    font-size: 16px;
    font-weight: 400;
    border: 2px solid #FF0000;
    padding: 8px 40px;
    width: 190px;
    text-align: center;
    display: inline-block;
}
.back-btn a{
    font-size: 20px;
    font-weight: 600;
    color: #D0AD6A;
    border: 2px solid #D0AD6A;
    padding: 4px 40px;
    width: 190px;
    text-align: center;
    display: inline-block;
}
.back-btn{
    max-width: 1000px;
    margin: 0 auto;
    padding: 0 20px;
}
.single .entry-title{
    border: 0;
    padding: 0;
    font-size: 36px;
    font-weight: 400;
}
.single-event .meta.clr{
    padding-left: 20px;
    padding-right: 20px;
}
.meta-date i{
    display: none !important;
}
.meta-date{
    font-size: 24px;
    font-weight: 600;
    color: #000000;
}
.singlepost-gallery{
    width: 1000px;
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 50px;
}
.singlepost-gallery .gallery-car-wrap{
    padding: 0 20px;
}
.single-event .entry-content, .single-event .entry-header{
    padding: 0 20px;
}
#blog-entries .blog-entry:nth-child(even) .blog-entry-title.entry-title a, #blog-entries .blog-entry:nth-child(even) p{
    color: #ffffff;
}
body.dark-mode .blog-entry-title.entry-title a, body.dark-mode .blog-entry-readmore a{
    color: #ffffff;
}
#blog-entries .blog-entry:nth-child(even) .blog-entry-readmore a{
    color: #ffffff;
}
.blog-entry-title.entry-title{
    font-size: 26px;
    margin: 0;
    font-weight: 300;
}
.slick-dots li button{
    background: #000000;
    opacity: .68;
    width: 12px;
    height: 12px;
}
.slick-dots{
    bottom: -30px;
}
.slick-dots li{
    width: 12px;
    height: 12px;
}
.slick-dots li.slick-active button{
    background: #D0AD6A;

}
.slick-dots li button:before{
    content: '';
    width: 12px;
    height: 12px;
}
.slick-next {
    right: 0;
    top: 0;
    bottom: 0;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.68);
}
.slick-prev{
    right: unset;
    left: 0;
    top: 0;
    bottom: 0;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.68);
}
/* Footer */
.footer-social, .city-cnt
{
    text-align: center;
}
.footer-social{
    margin-bottom: 40px;
}
.city-cnt{
    margin-bottom: 35px;
}
.footer-address{
    font-size: 12px;
    line-height: 1.6;
}
.footer-logo{
    margin-bottom: 20px;
}
.footer-logo svg{
    width: 74px;
}
.footer-contact-info{
    margin-bottom: 45px;
}
.footer-contact-info{
    text-align: center;
    color: #ffffff;
}
.foot-copyright{
    text-align: center;
    font-size: 14px;
    color: #ffffff;
}
.footer-social a{
    margin: 0 3px;
}
.foot-terms{
    text-align: center;
}
.foot-terms li{
    display: inline-block;
    margin: 0 5px;
    font-size: 14px;
}
.foot-terms li a:hover{
 color: #D0AD6A !important;
}
/* Member Pop Up */
.noscroll { 
    overflow: hidden;
}
#member-modal {
    position: fixed;
    width: 80%;
    top: 50%;
    margin: 0 auto;
    padding: 50px;
    background-color: #fff;
    color: #000;
    overflow-y: scroll;
    display: none;
    z-index: 999;
    opacity: 0;
    right: 0;
    left: 0;
}
#member-modal.pop-is-open {
    height: 100%;
    width: 100%;
    top: 50%;
	background-color: rgba(0, 0, 0, 0.5);
}
.mem-box {
    background: #fff;
    padding: 50px;
    top: 50%;
    transform: translate(0, 20%);
}

#memeberDescription {
    font-size: 14px;
}

#member-modal.pop-is-open {
    -webkit-transform: translate(0, -50%);
    -moz-transform: translate(0, -50%);
    -ms-transform: translate(0, -50%);
    transform: translate(0, -50%);
    opacity: 1;
    display: block;
}

#member-modal.pop-is-open #memberImgPop {
    margin-right: 40px;
}

.meber-cat-wrap, .mem-cat-name {
    margin-bottom: 60px;
}

.mem-cat-name {
    font-size: 38px;
}

.pop-cnt-wrap {
    border-right: 1px solid #ffffff;
    height: 100%;
    padding-right: 20px;
}

.close-popup-member {
    position: absolute;
    right: 25px;
    top: 35px;
    transform: translateY(-50%);
    color: #000000;
}

.close-popup-member .fas{
    font-size: 25px;
}
.close-popup-member .fas:hover{
    color: #d0ad6a;
}

div#members-11 {
    /* background: #fcf9f4; */
    padding-top: 30px;
}
#members-8 img.attachment-post-thumbnail.size-post-thumbnail.wp-post-image {
    border-radius: 300px;
}

.m-open-popup:hover {
    cursor: pointer;
}

.m-open-popup:hover .member-hover-box {
    opacity: 1;
}

.member-col {
    height: 200px;
    background-position: top center;
    background-size: cover;
    background-repeat: no-repeat;
}

.member-col-in {
    padding: 0 5px 10px;
}

.member-hover-box {
    height: 100%;
    background-color: rgba(0, 0, 0, 0.39);
    color: #ffffff;
    opacity: 0;
    -webkit-transition: all 0.5s ease;
    -moz-transition: all 0.5s ease;
    -o-transition: all 0.5s ease;
    transition: all 0.5s ease;
    position: relative;
    font-size: 24px;
}

.member-hover-box i {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
}
/* ... */

